features: add TODOs, comments

--- a/notebooks/rag.ipynb
+++ b/notebooks/rag.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "154b2d0e-f7ce-453b-b3b7-eda0666a9795",
    "metadata": {},
@@ -9,6 +10,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "de569042-32c7-4bea-a1ef-f0e41e260645",
    "metadata": {},
@@ -20,6 +22,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "68a962bf-4bb5-47ff-a667-89d493b1eeed",
    "metadata": {
@@ -36,6 +39,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b6b842ed-9c65-488f-a5b3-fcbced58c2c5",
    "metadata": {},
@@ -44,6 +48,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c09a1b69-8386-4043-846a-86b5396090af",
    "metadata": {},
@@ -58,6 +63,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "dc5bc988-231a-4aa4-8d9d-2192488e1724",
    "metadata": {},
@@ -68,6 +74,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "35af14d4-478a-418b-a738-b17012188779",
    "metadata": {},
@@ -76,6 +83,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "dde6f87c-c5c2-4374-b256-f6d17205d402",
    "metadata": {},
@@ -219,6 +227,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8e3928f1-1404-430d-8633-45bb1a1c21d3",
    "metadata": {},
@@ -294,6 +303,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "bab7f73e-bdd1-4c87-93d0-92ece2344432",
    "metadata": {},
@@ -302,6 +312,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "00a1ed16-0f0d-4be1-951a-21a8cde1bfe9",
    "metadata": {},
@@ -312,6 +323,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4c503edd-963a-4ec3-9182-39f7afc44153",
    "metadata": {},
@@ -333,6 +345,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1f82562f-2b5d-4e8d-9716-b0da8670e8bf",
    "metadata": {},
@@ -348,6 +361,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "77456cf7-fe2b-4884-bfc2-99a2b4ffba1a",
    "metadata": {},
@@ -379,6 +393,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ba9edff6-6dbf-4037-9675-ae05cd3eb7a7",
    "metadata": {
@@ -389,6 +404,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4f13f0dc-7f7a-4132-93e4-dc69aab164a2",
    "metadata": {},
@@ -437,6 +453,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "24f4ed64-2dd8-43c2-9831-cdf9d6d8004c",
    "metadata": {},
@@ -515,6 +532,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2c144ef2-ffa5-49ed-9bb3-60a50223854c",
    "metadata": {},
@@ -523,6 +541,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "78c103aa-9b34-4d7b-8b42-78737eb0888d",
    "metadata": {},
@@ -559,6 +578,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "bfa7564d-fce5-4807-8bf2-de9f93c6f994",
    "metadata": {},
@@ -631,6 +651,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4d38775f-0a4b-4aad-866d-1a3231b32df7",
    "metadata": {},
@@ -710,6 +731,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d9c23b31-e7b3-4078-abf7-683f448f5b19",
    "metadata": {},
@@ -718,6 +740,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "fb44e2b4-d48a-4f27-b9e4-99579917b18e",
    "metadata": {},
@@ -770,6 +793,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1e39c99a-5f33-4052-ba0e-cbc69d104ec1",
    "metadata": {},
@@ -812,6 +836,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "09187588-e1dc-44c5-b88b-cc8ebe3f9c48",
    "metadata": {},
@@ -820,6 +845,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "eb9f53f1-2720-4a47-8b2f-1b206c38c425",
    "metadata": {},
@@ -875,6 +901,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3fe36601-1269-482b-9bac-b52b32fb338e",
    "metadata": {},
@@ -902,6 +929,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4d4f119d-535d-4548-bb83-177e3bcefeed",
    "metadata": {},
@@ -987,6 +1015,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "318798c3-d119-4eb5-ad81-b2834516151a",
    "metadata": {},
@@ -995,6 +1024,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "974cc146-c337-4478-a119-5daadedd340c",
    "metadata": {},
@@ -1034,6 +1064,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cd3d604e-437c-4917-9503-cdc6a74df982",
    "metadata": {},
@@ -1117,6 +1148,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6fc7d446-3936-4c4a-aa01-f6dc46991416",
    "metadata": {},
@@ -1146,6 +1178,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f5738d23-91e3-4016-826e-716872f76b62",
    "metadata": {
@@ -1156,6 +1189,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0bec2b7c-35be-40d1-9e12-29d7d6178d4d",
    "metadata": {},
@@ -1231,6 +1265,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8dfe6bd9-bad1-4b21-9aea-fc2e127ba3fc",
    "metadata": {},
@@ -1269,6 +1304,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "77e0511e-d79c-4d54-a50f-163c11fc8643",
    "metadata": {},
@@ -1277,6 +1313,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "bad51191-19d1-40d5-bbc8-72245fafd154",
    "metadata": {},
@@ -1351,6 +1388,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "29fc2167-3f0b-4cac-96a0-67ecb9854f2c",
    "metadata": {},
@@ -1413,6 +1451,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "34feb8ca-5e72-4b12-8ab3-55ca5af05109",
    "metadata": {},
@@ -1421,6 +1460,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6676dbb2-a143-463c-8de2-9a2763e12059",
    "metadata": {},
@@ -1452,6 +1492,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4fa7a068-fc77-4928-bf58-52321616f9d5",
    "metadata": {},
@@ -1460,6 +1501,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0a19d3e8-b7e8-4d69-aa70-118af1fb1708",
    "metadata": {},
@@ -1470,6 +1512,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "03acb7e0-7bcb-4e2f-8552-5fe182a278db",
    "metadata": {},
@@ -1604,6 +1647,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f95f9309-1d92-4e43-8de4-f5286d11d4af",
    "metadata": {},
@@ -1748,6 +1792,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4c522532-98c2-46e9-b262-1747145f34e1",
    "metadata": {},
@@ -1773,6 +1818,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "36a5e137-1f4a-4c31-b1af-0c9e48131f82",
    "metadata": {},
@@ -1781,6 +1827,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "67a7f87b-9f90-40c7-85df-2e0c287a5144",
    "metadata": {},
@@ -1864,6 +1911,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5b029edf-e018-427f-a1c9-2b4bf689d09c",
    "metadata": {},
@@ -1872,6 +1920,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8dea24ed-0a47-47a6-9881-0af1ea8c5691",
    "metadata": {},
@@ -1884,6 +1933,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f8b51fd3-7a86-41dd-91bb-adcb83bf7269",
    "metadata": {},
@@ -1892,6 +1942,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "07b3f59f-f79b-4cdb-b55f-6d1d5d245628",
    "metadata": {},
@@ -1903,6 +1954,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a42a1ebb-b3d2-48d7-9d9f-bf5231cfe5b8",
    "metadata": {},
@@ -1925,6 +1977,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3734e048-033c-46c3-834f-5cc4b380e00a",
    "metadata": {},
@@ -1958,6 +2011,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7a7c708e-8fd1-4560-b65f-cf62d0034722",
    "metadata": {},
@@ -2087,6 +2141,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6b31ebee-f839-4aaa-b328-72cee088c830",
    "metadata": {
@@ -2097,6 +2152,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e89f56c4-2629-4ff7-b57c-f319170937de",
    "metadata": {},
@@ -2233,6 +2289,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "df01f761-d3a7-4783-9fa7-57f62679b548",
    "metadata": {},
@@ -2243,6 +2300,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6acc3a24-007d-4add-b0dd-5832351c6d63",
    "metadata": {
@@ -2253,6 +2311,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "11775f23-89ef-432d-a00d-2a11ffaebf67",
    "metadata": {},
@@ -2396,6 +2455,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "680569cb-d1b3-464e-b771-1f5dd3d0cc66",
    "metadata": {},
@@ -2419,6 +2479,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "fc80dd05-ced6-49b4-a193-c52fcebc118e",
    "metadata": {
@@ -2429,6 +2490,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "84fbb854-b016-4c42-97bc-56c7eebfa3dd",
    "metadata": {},
@@ -2576,6 +2638,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ee986a80-8659-4344-bb22-71bb62b32946",
    "metadata": {},
@@ -2596,6 +2659,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1a04dff3-5323-419f-a290-849c96899292",
    "metadata": {},
@@ -2604,6 +2668,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "df10c471-22b5-479c-bbbd-59ff3835d7b9",
    "metadata": {},
@@ -2745,6 +2810,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7fd24b35-1db3-4326-ab0c-c4b484fb5aea",
    "metadata": {},
@@ -2765,6 +2831,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8b21b32f-bacb-4703-b16c-d4a7014779dc",
    "metadata": {},
@@ -2773,6 +2840,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f393785f-17da-45eb-bf69-1483f74a370e",
    "metadata": {},
@@ -2924,6 +2992,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9add6de4-bc41-4f94-ba5a-edc3d81309a4",
    "metadata": {
@@ -2934,6 +3003,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "97d1cd68-f77a-4f13-9454-3add1fc65158",
    "metadata": {},
@@ -2954,6 +3024,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f916ea05-4b99-4024-9211-ed35bb8ac9dc",
    "metadata": {},
@@ -2962,6 +3033,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2c420359-c506-4257-b0d8-8b826134d001",
    "metadata": {},
@@ -2970,6 +3042,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "96c145a5-e97e-4811-ba12-c1a37d71c171",
    "metadata": {
@@ -3135,6 +3208,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d223b361-4d14-4ea1-804b-0eb92eb1224e",
    "metadata": {},
@@ -3143,6 +3217,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2463c757-f54e-4905-bd8b-d00a32c2ec7d",
    "metadata": {},
@@ -3176,6 +3251,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d506e529-518b-4b37-bd81-4d5e7532b528",
    "metadata": {},
@@ -3256,6 +3332,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6cc6a7b8-427b-433c-98e3-c82b6ffaf042",
    "metadata": {},
@@ -3350,6 +3427,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ec755df6-2568-445c-a9b0-7f3fa30fa9d4",
    "metadata": {},
@@ -3412,6 +3490,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a84b35b1-1342-47cb-a203-b8f24926cfab",
    "metadata": {},
@@ -3420,6 +3499,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "014a7e88-a8c1-4114-ae2a-0651363595da",
    "metadata": {},
@@ -3550,6 +3630,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "79d4b6eb-cdbc-46cb-ab3d-adc246f9da9c",
    "metadata": {},
@@ -3631,6 +3712,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1f0bc8bd-5d8a-4936-8460-8715464ed230",
    "metadata": {},
@@ -3664,6 +3746,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cf3f9a4a-15bb-4567-82bb-e2a0808f1616",
    "metadata": {},
@@ -3672,6 +3755,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "615b2ad0-94a1-477c-92ee-6bdab3dcc99e",
    "metadata": {},
@@ -3680,6 +3764,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6df6c44c-10e5-482f-a715-efd0b2c068a1",
    "metadata": {},
@@ -3688,6 +3773,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "fce8c9b5-cce0-467c-81b9-1aefcb7437d3",
    "metadata": {},
@@ -3696,6 +3782,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e895c161-f035-49dc-84d5-1f70d2b65ef9",
    "metadata": {},
@@ -3704,6 +3791,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5c79bcbe-89eb-469d-a809-acb780cec143",
    "metadata": {},
@@ -3712,6 +3800,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "fc4b13ef-11a8-472d-85a5-48b480628e59",
    "metadata": {},
@@ -3720,6 +3809,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "14f2b5b9-8fe0-44a3-8910-8ce21056dc57",
    "metadata": {},
@@ -3728,6 +3818,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "150189f9-e9c0-4af5-b426-74c847ab22b2",
    "metadata": {},
@@ -3745,6 +3836,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0c61ff8d-d76b-47d5-8ae8-85d7aaf41b19",
    "metadata": {},
@@ -3753,6 +3845,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6f451be7-3468-4dab-aed9-2e6621ad0a10",
    "metadata": {},
