features: remove PDFs that can't be loaded up, attempt at fetching title back from downloaded PDFs (deprioritized for now)

--- a/rag/Llama_index_sandbox/sandbox.ipynb
+++ b/rag/Llama_index_sandbox/sandbox.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import data\n",
-    "index = data.run()"
+    "import main\n",
+    "index = main.run()"
    ]
   },
   {
